[package]
name = "tank"
version = "0.1.0"
edition = "2024"

[features]
# 本地开发可选，加快编译；CI 不使用此 feature
dynamic = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "2d",
] } # bevy 引擎
leafwing-input-manager = "0.20" # 输入管理??
avian2d = "0.6" # 物理引擎
rand = "0.9.2" # 随机数
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
bevy_ecs_tilemap = "0.18.1"
bevy_ecs_ldtk = "0.14.0"

[package.metadata.bevy_cli.web]
default-features = false
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]

[package.metadata.bevy_cli.web.release]
wasm-opt = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-inspector-egui = "0.36.0"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[target.wasm32-unknown-unknown.dependencies]
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom = { version = "0.3", features = ["wasm_js"] }
